[project]
name = "estonian-transport-mcp"
version = "1.4.0"
description = "MCP server for Estonian public transport timetables, trip planning, and real-time vehicle tracking"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Allan", email = "allan@rank.ee" }]
readme = "README.md"
keywords = ["mcp", "estonia", "transport", "timetable", "gtfs", "tallinn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/a-rank/estonian-transport-mcp"
Repository = "https://github.com/a-rank/estonian-transport-mcp"
Issues = "https://github.com/a-rank/estonian-transport-mcp/issues"

[project.scripts]
estonian-transport-mcp = "estonian_transport_mcp:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["estonian_transport_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
